--- a/task-06.html
+++ b/task-06.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./CSS/task-06.css" />
     <title>Задание 6</title>
     <style>
       body {
@@ -18,6 +19,12 @@
 
   <body>
     <p><a href="index.html">На главную</a></p>
+    <input
+      type="text"
+      id="validation-input"
+      data-length="6"
+      placeholder="Введи 6 символов"
+    />
     <script src="js/task-06.js" type="module"></script>
   </body>
 </html>
